test/org/midica/testfiles/failing/param-i-outside-function-nested.midica
INCLUDE inc/instruments.midica

(
	0  c  /4  l=$[1]
)